2020/02/05  0.4.0   added global callback onReboot nd hookReboot API function
                    added hooks.ino example in /advanced

2020/02/02  0.3.0   bugfix to chunker remove memory leak
                    add createPartial / getPartial

2020/01/16  0.2.1   added replaceAll to utils

2019/12/02  0.1.0   added static functions hookLoop / runHooks for fwd compatibilty with
                    H4P_GPIOManager

                    added this file